--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <![endif]-->
 
 	<script>
+	$(window).load(function() {
+		$(".loader").fadeOut("slow");
+	})
 	$(document).ready(function () {
 		var $container = $('.masonry-container');
 		$container.imagesLoaded( function() {
@@ -38,7 +41,7 @@
   </head>
 
   <body>
-
+	<div class="loader"></div>
     <div class="container">
 
       <!-- Jumbotron -->
