Title and Text Changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/ochaonline_theme_favicon.ico">
 
-    <title>Displaced Faces of Zamboanga: Life in Transition</title>
+    <title>Zamboanga: Lives in Transition</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -49,7 +49,7 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1><img alt="Displaced Faces of Zamboanga: Life in Transition" src="img/title.png"></h1>
+        <h1><img alt="Zamboanga: Lives in Transition" src="img/title.png"></h1>
         <p class="lead">Sixteen months after the 'Zamboanga Siege' – a violent clash between a faction of Moro National Liberation Front and the Philippine government forces in September 2013 killed at least 140 and uprooted 120,000 – almost 20,000 people remain in temporary shelters, struggling to make their ends meet.  Assistance for basic needs of the IDPs such as water, protection and education continue while durable solutions are being sought for their long-term housing and livelihood options. <br><br>
 		These photos were taken in different evacuation centres and transitional sites for IDPs in Zamboanga between 15 and 27 January 2015.  Despite the prolonged hardships, many of the displaced people work hard to help their family and fellow IDPs in the community, while the local government and humanitarian organizations provide framework for better assessing their priority needs and deliver tangible support.
 		</p>
@@ -59,15 +59,11 @@
       <div class="masonry-container">
         <div class="item">
 			<img src="img/faces/photo1.jpg">
-			<p>A Grandstand baby. Since the fighting erupted in Zamboanga City in September 2013, #  babies were born to families staying in the Joaquin Enriquez Sports Complex, also known as Grandstand. They still do not have a place to call home. [Grandstand]</p>
-        </div>
-        <div class="item">
-			<img src="img/faces/photo2.jpg">
-			<p>“I am a mother of four and this is the youngest. The father? He is working as a tricycle driver outside the Grandstand. We are from Santa Barbara (one of the districts worst affected by the siege). Do we want to go back? Of course we want to go back there but we don’t know when we can.” [Grandstand]</p>
+			<p>A Grandstand baby. Since the fighting erupted in Zamboanga City in September 2013, over 300 babies were born to families staying in the Joaquin Enriquez Sports Complex, also known as Grandstand. They still do not have a place to call home. [Grandstand]</p>
         </div>
         <div class="item">
 			<img src="img/faces/photo3.jpg">
-			<p>“Did you get me?” We find many children in Masepla – probably more than we should. About half of school-age children in Masepla are not attending school. [Masepla-1]</p>
+			<p>“Did you get me?” We find many children in Masepla – probably more than we should. As many as half of school-age children in Masepla are not attending school.  [Masepla-1]</p>
         </div>
         <div class="item">
 			<img src="img/faces/photo4.jpg">
@@ -133,7 +129,7 @@
         </div>
         <div class="item">
 			<img src="img/faces/photo20.jpg">
-			<p>“I work for IOM to help camp coordination and camp management at the evacuation centres and transitional sites for IDPs. As part of capacity building, we also train IDPs to find jobs.  Today I saw some of our former trainees were applying for jobs at a canning factory – moments like this make me proud of our work”. </p>
+			<p>“I work for IOM to help camp coordination and camp management at the evacuation centres and transitional sites for IDPs. As part of capacity building for livelihood, we also train IDPs on job skills. Today I found out some of my former trainees are applying for jobs at a canning factory – moments like this make me proud of our work.” IOM in partnership with the Technical Education and Skills Development Authority (TESDA) conducted skills training for IDPs on masonry, carpentry, etc. </p>
         </div>
         <div class="item">
 			<img src="img/faces/photo18.jpg">
